<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">

<ScrollView
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            android:textSize="50sp"
            android:textColor="#515c5e"
            android:background="#f3eab3"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@drawable/menu_button"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/completed_jobs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/completed_jobs"
                android:textColor="#515c5e"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/completed_jobs_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/completed_jobs"
                android:layout_toRightOf="@id/completed_jobs"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:padding="5dp"
                android:text="@string/completed_jobs_quantty"
                android:textSize="20sp"
                android:textColor="#515c5e"
                android:layout_toEndOf="@id/completed_jobs" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@drawable/menu_button"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/failed_jobs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/failed_jobs"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/failed_jobs_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/failed_jobs"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/failed_jobs"
                android:padding="5dp"
                android:text="@string/failed_jobs_quantity"
                android:textSize="20sp"
                android:layout_toEndOf="@id/failed_jobs" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@drawable/menu_button"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/productivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/productivity"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@id/productivity"
                android:layout_alignTop="@id/productivity"
                android:padding="5dp"
                android:text="@string/productivity_percent"
                android:textSize="20sp"

                android:layout_toEndOf="@id/productivity" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/current_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_button"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/current_week"
                android:textColor="#515c5e"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/menu_button"
                android:padding="5dp">

                <TextView
                    android:id="@+id/completed_week_jobs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/completed_jobs_week"
                    android:textColor="#515c5e"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/completed_wjobs_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/completed_week_jobs"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_toEndOf="@id/completed_week_jobs"
                    android:layout_toRightOf="@id/completed_week_jobs"
                    android:padding="5dp"
                    android:text="@string/completed_wjobs_quantity"
                    android:textColor="#515c5e"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/menu_button"
                android:padding="5dp">

                <TextView
                    android:id="@+id/failed_week_jobs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/failed_jobs_week"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/failed_wjobs_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/failed_week_jobs"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_toEndOf="@id/failed_week_jobs"
                    android:layout_toRightOf="@id/failed_week_jobs"
                    android:padding="5dp"
                    android:text="@string/failed_wjobs_quantity"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/menu_button"
                android:padding="5dp">

                <TextView
                    android:id="@+id/left_week_jobs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/left_jobs_week"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/left_week_jobs"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_toEndOf="@id/left_week_jobs"
                    android:layout_toRightOf="@id/left_week_jobs"
                    android:padding="5dp"
                    android:text="@string/left_wjobs_quantity"
                    android:textSize="20sp" />
            </RelativeLayout>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="vertical"
            android:background="@drawable/menu_button"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/shock_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/shock_days"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_toRightOf="@id/shock_days"
                android:text="@string/shock_days_quantity"
                android:textSize="20sp"
                android:layout_toEndOf="@id/shock_days" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal"
            android:background="@drawable/menu_button"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/current_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/status"
                android:layout_gravity="center"
                android:textSize="20sp" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:text="@string/current_status"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal"
            android:background="@drawable/menu_button"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/next_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/next_status_name"
                android:textSize="20sp" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:text="@string/next_status"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/menu_button">

            <TextView
                android:id="@+id/days_for_next_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/next_status_days_name"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/days_for_next_status"
                android:layout_toRightOf="@id/days_for_next_status"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/days_for_next_status"
                android:padding="5dp"
                android:text="@string/next_status_days"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>